--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start:dev": "dotenv -e .env.dev react-app-rewired start",
+    "start:test": "dotenv -e .env.test react-app-rewired start",
+    "start:prod": "dotenv -e .env.prod react-app-rewired start",
+    "build:dev": "dotenv -e .env.dev react-app-rewired build",
+    "build:test": "dotenv -e .env.test react-app-rewired build",
+    "build:prod": "dotenv -e .env.prod react-app-rewired build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,11 +42,14 @@
     ]
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.22.7",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "dotenv-cli": "^6.0.0",
     "immutable": "^4.1.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.0.0",
     "node-sass": "^7.0.1",
+    "react-app-rewired": "^2.2.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-immutable": "^4.0.0",
