--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react-app-rewired": "^2.2.1",
+    "react-countup": "^6.3.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-immutable": "^4.0.0",
